replaced path with only the filename

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,10 @@
             <figure style="float: left; margin-right: 20px; margin-bottom: 20px;">
                 <img src="{{ score[1] }}" height="200px">
                 <figcaption>{{ score[2] }}</figcaption>
-{#                <figcaption>{{ score[0] }}</figcaption>#}
             </figure>
             {% endfor %}
         </div>
+{#    <script#}
     </body>
 </html>
 
